[package]
name = "minutemanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluez-async = "0.7.1"
eyre = "0.6.8"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
tokio = { version = "1.27", features = ["full"] }
